# ppmd-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: miri.yml  rust.yml
ppmd-sys/: CMakeLists.txt
ppmd-sys/src/: lib.rs  native.rs
ppmd-sys/src/native/: Ppmd7.rs  Ppmd7Dec.rs  Ppmd7Enc.rs  Ppmd8.rs  Ppmd8Dec.rs  Ppmd8Enc.rs
src/: byte_reader.rs  decoder_7.rs  decoder_8.rs  encoder_7.rs  encoder_8.rs  internal.rs  lib.rs  memory.rs
src/internal/: ppmd7.rs  ppmd8.rs  tagged_offset.rs
src/internal/ppmd7/: decoder.rs  encoder.rs
src/internal/ppmd8/: decoder.rs  encoder.rs  range_coding.rs
src/native/: byte_reader.rs  byte_writer.rs  decoder_7.rs  decoder_8.rs  encoder_7.rs  encoder_8.rs  internal.rs  memory.rs  mod.rs
src/native/internal/: Ppmd7.rs  Ppmd7Dec.rs  Ppmd7Enc.rs  Ppmd8.rs  Ppmd8Dec.rs  Ppmd8Enc.rs  ppmd7.rs  ppmd7dec.rs  ppmd7enc.rs  ppmd8enc.rs
src/old/: byte_reader.rs  byte_writer.rs  decoder_7.rs  decoder_8.rs  encoder_7.rs  encoder_8.rs  memory.rs  mod.rs
src/old/internal/: ppmd7.rs  ppmd8.rs
src/old/internal/ppmd7/: decoder.rs  encoder.rs
src/old/internal/ppmd8/: decoder.rs  encoder.rs
tests/: ppmd7.rs  ppmd8.rs  reference_test.rs
tests/fixtures/text/: issue_3.txt
